--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-title: John Smith
-description: My Personal Blog
-author: John Smith
-logo: /hcz-jekyll-blog/static/img/avatar.png
-github: https://github.com/codeasashu
-about: Freelance developer
+title: Lisa Park
+description: Welcome! Let's git it!
+author: LisaPark
+logo: /static/img/avatar.png
+github: https://github.com/lissapark91
+about: 초급 개발자
 
-baseurl: "https://codeasashu.github.io/hcz-jekyll-blog"
-url: "https://codeasashu.github.io/hcz-jekyll-blog"
+baseurl: "https://lissapark91.github.io/"
+url: "https://lissapark91.github.io/"
 
 allowsearch: true
 
