--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Lisa Park
 description: Welcome! Let's git it!
 author: LisaPark
-logo: /static/img/avatar.png
+logo: /static/img/avatar.jpg
 github: https://github.com/lissapark91
 about: 초급 개발자
 
