--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Lisa Park
 description: Welcome! Let's git it!
 author: LisaPark
-logo: /static/img/avatar.jpg
+logo: /static/img/main.jpg
 github: https://github.com/lissapark91
 about: 초급 개발자
 
@@ -11,7 +11,7 @@ url: "https://lissapark91.github.io/"
 allowsearch: true
 
 disqus_shortname: aboutashu
-google_analytics: UA-72862926-1
+google_analytics: UA-123015599-1
 
 share:
   twitter_username: \#
